# expsolve

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
docs/: README.md  index.html
examples/fourier/: example-laser-potential.ipynb  example2d.ipynb  runtest1d.py  torch-play.ipynb  tutorial1d.ipynb  tutorialML.ipynb  tutorial_batch.ipynb
examples/machinelearning/: 03_control_well_transfer.ipynb
examples/splittings/: runtestclassical.py  tutorialclassical.ipynb  tutorialimaginarytime.ipynb
examples/tutorials/01_tensorgrid/: 00_quick_introduction.ipynb  01_grid.ipynb  02_differential_operators.ipynb  02_differentiation.ipynb  03_differentiation_matrices.ipynb  03_observables.ipynb  04_brute_force_solution_of_schrodinger.ipynb  04_functions_of_differential_operators_1D.ipynb  05_functions_of_differential_operators_nD.ipynb  06_brute_force_solution_of_schrodinger.ipynb  07_split_step_method_for_schrodinger.ipynb  08_observables.ipynb
examples/tutorials/02_evolve/: 00_quick_introduction.ipynb  01_time_stepping_with_evolve.ipynb  02_classical_splitting.ipynb  03_non-autonomous_splitting.ipynb  03_time_ordered_splittings.ipynb  04_nonlinear.ipynb  04_nonlinear_splitting.ipynb  05_animation.ipynb  06_batch_processing.ipynb  anim.ipynb
examples/tutorials/03_batch_parallel/: 00_quick_introduction.ipynb  01_differentiating_functions.ipynb  02_visualization.ipynb  03_splittings_1d.ipynb  (+1 more)
olddist/: expsolve-0.0.3-py3-none-any.whl  expsolve-0.0.5-py3-none-any.whl  expsolve-0.0.6-py3-none-any.whl
src/expsolve/: __init__.py  timepropagation.py
(+38 files in other folders)
